<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AboutAppFragment"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/dark_grey"
            android:text="@string/about_app"
            android:gravity="center"
            android:textSize="24dp"
            android:fontFamily="@font/montserrat_bold_bold">
        </TextView>
        <ImageView
            android:layout_width="177dp"
            android:layout_height="177dp"
            android:layout_marginTop="19dp"
            android:background="@mipmap/icon_app"
            android:layout_gravity="center">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/montserrat_bold_bold"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="24dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold_bold"
            android:gravity="center_horizontal"
            android:text="@string/info_app"
            android:textSize="12dp">
        </TextView>
        <LinearLayout
            android:layout_width="213dp"
            android:layout_height="60dp"
            android:layout_marginTop="102dp"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:text="@string/version"
                android:fontFamily="@font/montserrat_bold_bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:text="@string/developer"
                android:fontFamily="@font/montserrat_bold_bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:text="@string/artist"
                android:fontFamily="@font/montserrat_bold_bold">
            </TextView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:layout_marginTop="122dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="Политика конфиденциальности"
            android:fontFamily="@font/montserrat_medium_medium">
        </TextView>
    </LinearLayout>
</FrameLayout>