<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.register.singin.SingInFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="306sp"
            android:layout_height="328sp"
            android:layout_marginTop="161dp"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/dark_grey_fill">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_bold_bold"
                    android:textColor="@color/lavender"
                    android:text="@string/sign_in"
                    android:letterSpacing="0.14"
                    android:textAllCaps="true"
                    android:textSize="27sp"
                    android:layout_marginTop="52dp"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="52dp"
                    android:layout_marginTop="33dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailSingInText"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="25sp"
                        android:textColorHint="@color/hint"
                        android:textSize="14sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/Email"
                    android:layout_marginHorizontal="52dp"
                    android:textColor="@color/hint">
                </TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="52dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordSingInText"
                        android:layout_width="match_parent"
                        android:background="@android:color/transparent"
                        android:layout_height="25dp"
                        android:layout_marginTop="6dp"
                        android:textSize="14sp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/Password"
                    android:layout_marginHorizontal="52dp"
                    android:textColor="@color/hint">
                </TextView>
                <Button
                    android:id="@+id/vhod_button"
                    android:layout_width="174dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="38dp"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/lavender_fill"
                    android:textSize="14sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/singin_to_singup"
            android:layout_width="174dp"
            android:textAllCaps="false"
            android:layout_height="40dp"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/lavender_fill"
            android:text="@string/sign_up"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/singin_to_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/Forgot_password"
            android:background="@android:color/transparent"
            android:textSize="14sp"/>
    </LinearLayout>
</ScrollView>