<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.register.singup.SingUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="306dp"
            android:layout_height="402dp"
            android:layout_marginTop="147dp"
            android:layout_marginHorizontal="30dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dark_grey_fill"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="51dp"
                    android:fontFamily="@font/montserrat_bold_bold"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/lavender"
                    android:textSize="27dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="23dp"
                    android:hint="@string/Email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailSingUpText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/Password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordSingUpText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/Password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordAgainSingUpText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/singup_button"
                    android:layout_width="174dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/lavender_fill"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:textAllCaps="false"
            android:id="@+id/singup_to_singin"
            android:layout_width="174dp"
            android:layout_height="45dp"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/lavender_fill"
            android:text="@string/sign_in"
            android:textSize="20dp"/>
    </LinearLayout>
</ScrollView>


